--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ license = { file = "LICENSE" }
 [project.scripts]
 wallcrop = "wallcrop.wallcrop:main"
 wallswitch = "wallcrop.wallswitch:main"
+wallcrop_create_monitors = "wallcrop.create_monitors_file:main"
 
 [project.urls]
 Github = "https://github.com/themaxw/wallcrop"
